--- a/AmitWebProject/AmitWebProject/templates/dataSet.html
+++ b/AmitWebProject/AmitWebProject/templates/dataSet.html
@@ -2,8 +2,8 @@
 {% block content %}
 <div dir="ltr">
     <div class="Jumbotron">
-        <h1> Warships Data Base</h1>
-        <p>The Data Base includes warships from WWI to these days</p>
+        <h1> application Data Base</h1>
+        <p>The Data Base includes applications from google play store</p>
     </div>
 
     <table class="table table-bordered">
@@ -141,3 +141,5 @@ for (i = 0; i < coll.length; i++) {
 }
 </script>
 {% endblock %}
+
+
