--- a/AmitWebProject/AmitWebProject/templates/contact.html
+++ b/AmitWebProject/AmitWebProject/templates/contact.html
@@ -1,20 +1,17 @@
 {% extends "layout.html" %}
 
 {% block content %}
-
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
-
+<h1>Amit Weizman</h1>
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Rodenski 4 ,Tel Aviv<br />
+    Israel<br />
+    <abbr title="Phone">Cell:</abbr>
+    <a href="tel:+972587806644">058-7806644</a>
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Email me:</strong>   <a href="mailto:amitweiz4@gmail.com">amitweiz4@gmail.com</a><br />
+ 
 </address>
 
 {% endblock %}
