--- a/AmitWebProject/AmitWebProject/templates/layout.html
+++ b/AmitWebProject/AmitWebProject/templates/layout.html
@@ -51,6 +51,8 @@
                     <li><a href="{{ url_for('Login') }}">Log in</a></li>
                     <li><a href="{{ url_for('data') }}">Data</a></li>
                     <li><a href="{{ url_for('query') }}">Query</a></li>
+                    <li><a href="{{ url_for('about') }}">About</a></li>
+                    <li><a href="{{ url_for('contact') }}">Contact</a></li>
 
                 </ul>
             </div>
