--- a/AmitWebProject/AmitWebProject/templates/query.html
+++ b/AmitWebProject/AmitWebProject/templates/query.html
@@ -8,7 +8,7 @@
             {{ form1.csrf_token }}
             {{ wtf.form_field(form1.genres)}}
             {{ wtf.form_field(form1.types)}}
-            <input class="btn btn-primary" type="submit" value="הצג">
+            <input class="btn btn-primary" type="submit" value="Show">
         </form>
     </div>
 </div>
